заменить создание коллекции на listof